Fix line spacing differences. Add new pattern to include a warning text. Update template example.

--- a/src/wmnds/components/inset-text/_inset-text.scss
+++ b/src/wmnds/components/inset-text/_inset-text.scss
@@ -14,4 +14,8 @@
     -webkit-appearance: none;
   }
 
+  p {
+    margin-bottom: $size-sm;
+  }
+
 }
